[gd_scene load_steps=4 format=3 uid="uid://c6ir1ldvanmwy"]

[ext_resource type="Texture2D" uid="uid://dctmipictsdpu" path="res://assetit/images/Daco_4855464.png" id="1_1tlhd"]
[ext_resource type="Script" path="res://Scenes/HUD/shop.gd" id="1_gwhyu"]
[ext_resource type="PackedScene" uid="uid://b52xqi3fc58qn" path="res://Scenes/items/dagger.tscn" id="3_uvxwt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwhyu")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
offset_left = 344.0
offset_top = 128.0
offset_right = 844.0
offset_bottom = 428.0
texture = ExtResource("1_1tlhd")
expand_mode = 2

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 404.0
offset_top = 148.0
offset_right = 724.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 60
columns = 3

[node name="shopslot1" type="Panel" parent="Control/GridContainer"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
mouse_force_pass_scroll_events = false

[node name="costslot1" type="Button" parent="Control/GridContainer/shopslot1"]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 56.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
action_mode = 0
text = "5"

[node name="Dagger" parent="Control/GridContainer/shopslot1" instance=ExtResource("3_uvxwt")]
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 792.0
offset_top = 144.0
offset_right = 809.0
offset_bottom = 175.0
text = "x"

[connection signal="pressed" from="Control/GridContainer/shopslot1/costslot1" to="." method="_on_costslot_1_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
